@@ -496,14 +496,14 @@ public final class GraphSearchUtils {
                 if (!forwardPaths.isEmpty()) {
                     return new LegalMagRet(false,
                             "Bidirected edge semantics is violated: Directed path exists from " + x + " to " + y +
-                            ". An example path is " + GraphUtils.pathString(mag, forwardPaths.get(0), false));
+                            ". An example path is " + GraphUtils.pathString(mag, forwardPaths.getFirst(), false));
                 }
 
                 List<List<Node>> backwardPaths = mag.paths().directedPaths(y, x, 1);
                 if (!backwardPaths.isEmpty()) {
                     return new LegalMagRet(false,
                             "Bidirected edge semantics is violated: Directed path exists from " + y + " to " + x +
-                            ". An example path is " + GraphUtils.pathString(mag, backwardPaths.get(0), false));
+                            ". An example path is " + GraphUtils.pathString(mag, backwardPaths.getFirst(), false));
                 }
             }
         }
